# doomscrum

./: .commit-msg.txt  .gitignore  .landmark.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  VISION.md  backlog.config.json  doomscrum.toml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  specifi.toml  tsconfig.json  tsconfig.typecheck.json  vite.config.ts
.brainrot/: events.ndjson  index.json
assets/: index.html  manifest.webmanifest
backlog.d/: 001-cache-chaos-exorcism.md  004-needs-spec-confessional.md  005-brainrot-vibe-meter.md  006-throttle-every-money-path.md  007-stream-media-ranges.md  008-gc-generated-state.md  009-live-dispatch-logs-in-ui.md  010-spec-specific-fixtures.md  011-ci-pipeline.md  012-browser-e2e-smoke.md  013-persona-qa-agent.md  014-agent-pr-triage.md  015-feed-polish.md  016-multi-repo-sync.md  017-distribution.md  018-marketing-site.md  019-onboarding-first-run.md  020-commercial-model-memo.md  022-legal-safety-baseline.md  023-cost-observability.md  024-feed-caption-overlay.md  025-draft-tier-renders.md  026-deterministic-audio-spike.md  027-lazy-viewport-rendering.md  028-local-open-weights-provider.md  029-swipe-quota-tiers.md  030-script-eval-harness.md  031-render-verdict-gate.md  032-caption-artifact-schema.md  032-jit-render-lifecycle-followups.md  033-dispatch-untrusted-spec-hardening.md  035-triage-grade-receipts-and-undo.md  036-agent-contract-truth.md  037-extract-render-module.md  038-purge-orphaned-artifacts.md  039-agent-filesystem-egress-sandbox.md  040-close-the-loop-spec-readiness.md  (+5 more)
(+157 files in other folders)
