[package]
name = "specifi"
version = "0.2.0"
edition = "2021"
description = "PRD brainrot triage: backlog specs as swipeable shortform video, swipes dispatch agents"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
strip = true
